agregado de section FAQ

--- a/index.html
+++ b/index.html
@@ -5,11 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="shortcut icon" href="logo.ico" type="image/x-icon" />
 
-
     <!-- Agrega AOS CSS en el <head> -->
-<link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
-
-
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css" />
 
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
@@ -43,6 +40,9 @@
             <a href="https://wa.me/5492923507590" target="_blank"
               ><i class="bi bi-whatsapp"></i
             ></a>
+            <a href="https://wa.me/5492923507590" target="_blank"
+            ><i class="bi bi-facebook"></i
+          ></a>
             <a href="https://www.instagram.com/" class="instagram"
               ><i class="bi bi-instagram"></i
             ></a>
@@ -62,6 +62,7 @@
               <li><a href="#about">Sobre Nosotros</a></li>
               <li><a href="#services">Servicios</a></li>
               <li><a href="#contact">Contacto</a></li>
+              <li><a href="#faq">Preguntas Frecuentes</a></li>
               <img
                 src="/assets/logo.png"
                 alt="logo"
@@ -285,7 +286,7 @@
                 class="col-lg-12 d-flex justify-content-center flex-column align-items-center"
                 data-aos="fade-up"
               >
-                <h3 class="text-white">Información importante!</h3>
+                <h3 class="text-white">Información importante...</h3>
                 <ul class="benefit-list">
                   <li class="text-white">
                     <i class="bi bi-exclamation-circle"></i> Pago al iniciar el
@@ -384,8 +385,211 @@
       </div>
     </section>
 
+    <!-- Faq Section clientes -->
+    <section id="faq" class="faq section light-background">
+      <!-- Section Title -->
+      <div class="container section-title" data-aos="fade-up">
+        <h2>Preguntas Frecuentes</h2>
+        <p>
+          <span>Resuelve Tus</span>
+          <span class="description-title">Dudas</span>
+        </p>
+      </div>
+      <!-- End Section Title -->
+
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
+            <div class="faq-container">
+              <!-- Subtítulo -->
+              <div>
+                <h3 class="text-center faq-subtitle">
+                  ¿Desea contratar nuestros servicios?
+                </h3>
+              </div>
+
+              <!-- Preguntas FAQ -->
+              <div class="faq-item">
+                <h3 class="m-2">
+                  ¿Tienen disponibilidad para limpieza diaria, semanal o
+                  mensual?
+                </h3>
+                <div class="faq-content">
+                  <p>
+                    Tenemos disponibilidad siempre y cuando se solicite el
+                    mínimo de 8 hs mensuales independientemente de cómo sean
+                    distribuidas durante el mes.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <div class="faq-item">
+                <h3 class="m-2">¿Cuáles son las tarifas y cómo se calculan?</h3>
+                <div class="faq-content">
+                  <p>
+                    La tarifa se calcula de acuerdo a la cantidad de horas
+                    solicitadas y al tipo de servicio contratado. Para saber
+                    más, completá nuestro formulario y nos contactaremos a la
+                    brevedad.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <div class="faq-item">
+                <h3 class="m-2">
+                  ¿El precio se calcula de acuerdo al tamaño del lugar o el tipo
+                  de limpieza requerida?
+                </h3>
+                <div class="faq-content">
+                  <p>
+                    El valor se calcula de acuerdo al valor por hora vigente
+                    según el servicio contratado.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <div class="faq-item">
+                <h3 class="m-2">¿Ofrecen presupuesto sin costo?</h3>
+                <div class="faq-content">
+                  <p>Nuestros presupuestos son totalmente gratis.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <div class="faq-item item-3">
+                <h3 class="m-2">
+                  ¿Los productos de limpieza están incluidos en el servicio o
+                  los proporciona el cliente?
+                </h3>
+                <div class="faq-content">
+                  <p>
+                    Ofrecemos productos de limpieza SIN COSTO durante los
+                    primeros 4 meses de contratación. Luego se pueden pedir de
+                    manera cuatrimestral, con costo adicional.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <div class="faq-item">
+                <h3 class="m-2">
+                  ¿Qué sucede si no estoy conforme con el servicio contratado?
+                </h3>
+                <div class="faq-content">
+                  <p>
+                    Para quejas y reclamos contáctenos:
+                    <a href="mailto:info@coblan.org">info@coblan.org</a>.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+
+              <div class="faq-item">
+                <h3 class="m-2">
+                  ¿Pueden realizar limpieza fuera de horario laboral o fines de
+                  semana?
+                </h3>
+                <div class="faq-content">
+                  <p>Sí, tenemos personal disponible todos los días.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right m-2"></i>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- /Faq Section -->
+
+    <!-- Faq Section empleados -->
+    <section id="faq" class="faq section light-background">
+      <div class="container my-0">
+        <div class="row justify-content-center">
+          <div class="col-lg-10" data-aos="fade-up" data-aos-delay="100">
+            <h3 class="text-center faq-subtitle">
+              ¿Deseas trabajar con nosotros?
+            </h3>
+            <div class="faq-container">
+              <div class="faq-item faq-active">
+                <h3>¿Cuáles son los requisitos para trabajar en la empresa?</h3>
+                <div class="faq-content">
+                  <p>
+                    Ser mayor de 18 años, disponibilidad horaria. Ambos sexos.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div>
+              <!-- End Faq item-->
+
+              <div class="faq-item item-3">
+                <h3>
+                  ¿Es necesario tener experiencia previa en limpieza o capacitan
+                  el personal?
+                </h3>
+                <div class="faq-content">
+                  <p>Valoramos la experiencia previa pero no es excluyente.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div>
+              <!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>¿Tienen algún protocolo de seguridad en el trabajo?</h3>
+                <div class="faq-content">
+                  <p>
+                    Proporcionamos indumentaria y artículos de seguridad para
+                    desempeñar el trabajo de la manera más segura posible, los
+                    cuales deberán ser usados de manera obligatoria.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div>
+              <!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>¿Trabajan de manera independiente o en equipo?</h3>
+                <div class="faq-content">
+                  <p>
+                    De ambas formas; dependiendo del tipo de trabajo a realizar
+                    será la necesidad de personal contratada.
+                  </p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div>
+              <!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>¿El pago es mensual, quincenal o semanal?</h3>
+                <div class="faq-content">
+                  <p>El salario se abona de manera mensual.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div>
+              <!-- End Faq item-->
+
+              <div class="faq-item">
+                <h3>
+                  ¿Cómo manejan los accidentes o imprevistos durante el trabajo?
+                </h3>
+                <div class="faq-content">
+                  <p>Mediante ART.</p>
+                </div>
+                <i class="faq-toggle bi bi-chevron-right"></i>
+              </div>
+              <!-- End Faq item-->
+            </div>
+          </div>
+          <!-- End Faq Column-->
+        </div>
+      </div>
+    </section>
+    <!-- /Faq Section -->
+
     <footer id="footer" class="footer">
-      <div class="container footer-top">
+      <div class="container footer-top " data-aos="fade-up" data-aos-delay="100">
         <div class="row gy-4">
           <!-- Información de la empresa -->
           <div class="col-lg-4 col-md-6 footer-about">
@@ -421,6 +625,10 @@
                 <i class="bi bi-chevron-right"></i>
                 <a href="#contact">Contacto</a>
               </li>
+              <li>
+                <i class="bi bi-chevron-right"></i>
+                <a href="#faq">Preguntas Frecuentes</a>
+              </li>
             </ul>
           </div>
 
@@ -438,7 +646,7 @@
               </li>
               <li>
                 <i class="bi bi-chevron-right"></i>
-                <a href="#services">La limpieza final de obra</a>
+                <a href="#services">Limpieza final de obra</a>
               </li>
             </ul>
           </div>
@@ -451,6 +659,9 @@
               novedades y promociones exclusivas!
             </p>
             <div class="social-links d-flex">
+              <a href="https://www.facebook.com/" target="_blank"
+              ><i class="bi bi-facebook"></i
+            ></a>
               <a href="https://www.instagram.com/" target="_blank"
                 ><i class="bi bi-instagram"></i
               ></a>
@@ -492,6 +703,11 @@
     </div>
 
     <div class="floating-buttons">
+<!-- Botón de Facebook -->
+<a href="https://www.facebook.com/tuperfil" target="_blank" class="facebook">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/5/51/Facebook_f_logo_%282019%29.svg" alt="Facebook" width="30" height="30" />
+</a>
+
       <!-- Botón de WhatsApp -->
       <a href="https://wa.me/5492923507590" target="_blank">
         <img
@@ -515,10 +731,11 @@
       crossorigin="anonymous"
     ></script>
     <!-- Agrega AOS JavaScript antes de cerrar el <body> -->
-<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-<script>
-  AOS.init();
-</script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script src="desplegables.js"></script>
+    <script>
+      AOS.init();
+    </script>
     <script src="script.js"></script>
   </body>
 </html>
