agregado de fomularios de contacto sin funcionalidad con form select

--- a/solicitar-presupuesto.html
+++ b/solicitar-presupuesto.html
@@ -142,7 +142,7 @@
               <!-- Cantidad de Horas -->
               <div class="form-group mt-3">
                 <label for="horas" class="text-white">Cantidad de Horas</label>
-                <select class="form-control" id="horas" name="horas" required>
+                <select class="form-control form-select" id="horas" name="horas" required>
                   <option value="" disabled selected>
                     Selecciona una opción
                   </option>
