--- a/index.html
+++ b/index.html
@@ -452,11 +452,8 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="100">
-            <form
-              action="procesar-formulario.php"
-              method="POST"
-              class="contact-form"
-            >
+            <form id="contact-form" method="POST" class="contact-form">
+
               <div class="row">
                 <!-- Nombre -->
                 <div class="col-md-6">
@@ -515,9 +512,42 @@
                 ></textarea>
               </div>
 
+              <!-- Captcha de FormSubmit -->
+              <div class="form-group mt-3">
+                <script
+                  src="https://www.google.com/recaptcha/api.js"
+                  async
+                  defer
+                ></script>
+                <div
+                  class="g-recaptcha"
+                  data-sitekey="6Lc1seEqAAAAAP2H7pzlB_hFa9A0vaVvIpwcWR3O"
+                ></div>
+              </div>
+
+              <!-- Evitar Redirección -->
+              <input type="hidden" name="_next" value="" />
+              <input type="hidden" name="_captcha" value="true" />
+              <!-- Mensaje de Confirmación -->
+              <!-- Mensaje de Confirmación -->
+              <div
+                id="confirmation-message"
+                class="alert alert-success mt-4 d-none"
+              >
+                ✅ Tu mensaje ha sido enviado con éxito. Te responderemos
+                pronto.
+              </div>
+              <!-- Indicador de Carga -->
+              <div id="loading-spinner" class="text-center mt-4 d-none">
+                <div class="spinner-border text-light" role="status">
+                  <span class="visually-hidden">Enviando...</span>
+                </div>
+                <p class="text-white mt-2">Enviando mensaje...</p>
+              </div>
+
               <!-- Botón de Enviar -->
               <div class="text-center mt-4">
-                <button type="submit" class="btn btn-accent">
+                <button type="submit" id="submit-btn" class="btn btn-accent">
                   Enviar Mensaje
                 </button>
               </div>
@@ -891,6 +921,8 @@
     <script>
       AOS.init();
     </script>
+    <script src="contact-form.js"></script>
+
     <script src="script.js"></script>
   </body>
 </html>
