--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -33,10 +33,9 @@
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-8">
-            <form
-              id="work-form"
+            <form id="work-form" method="POST" enctype="multipart/form-data" 
               class="work-form"
-              enctype="multipart/form-data"
+             
             >
               <div class="row">
                 <!-- Nombre y Apellido -->
