--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -285,7 +285,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <!-- JavaScript para Manejo del Envío -->
-    <script src="work-form-handler.js"></script>
+    <script src="Work-form-handler.js"></script>
 
     <script>
       AOS.init();
