Agregado de cv al form de trabaja con nosotros

--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -230,10 +230,10 @@
               </div>
 
               <!-- Subir CV -->
-              <!-- <div class="form-group mt-3">
+              <div class="form-group mt-3">
                         <label for="cv" class="text-white">Sube tu CV (PDF o Word)</label>
                         <input type="file" class="form-control" id="cv" name="cv" accept=".pdf,.doc,.docx">
-                    </div> -->
+                    </div>
 
               <!-- Mensaje de Confirmación -->
               <div
